[gd_scene load_steps=7 format=3 uid="uid://iyu3ak5ca6wo"]

[ext_resource type="PackedScene" uid="uid://1y8fkofflo3x" path="res://scenes/actors/player/Player.tscn" id="2"]
[ext_resource type="TileSet" uid="uid://owyivpsaodj3" path="res://tileset.tres" id="2_bmve3"]
[ext_resource type="PackedScene" uid="uid://chwsuopb2lx3s" path="res://scenes/actors/player/Tilemap.tscn" id="3"]
[ext_resource type="Script" path="res://scenes/levels/DebugUI.gd" id="4_astv3"]
[ext_resource type="Texture2D" uid="uid://bmd3pv6e8mny6" path="res://assets/uisprites/shell.png" id="5_fufxx"]
[ext_resource type="Script" path="res://scenes/levels/UI.gd" id="5_ksbcl"]

[node name="World" type="Node2D"]

[node name="Tilemap" parent="." instance=ExtResource("3")]
tile_set = ExtResource("2_bmve3")
layer_0/tile_data = PackedInt32Array(-1179632, 0, 0, -1179631, 0, 0, -1179630, 0, 0, -1179629, 0, 0, -1179628, 0, 0, -1179627, 0, 0, -1179626, 0, 0, -1179625, 0, 0, -1179624, 0, 0, -1179623, 0, 0, -1179622, 0, 0, -1179621, 0, 0, -1179620, 0, 0, -1179619, 0, 0, -1179618, 0, 0, -1179617, 0, 0, -1179616, 0, 0, -1179615, 0, 0, -1179614, 0, 0, -1179613, 0, 0, -1179612, 0, 0, -1179611, 0, 0, -1179610, 0, 0, -1179609, 0, 0, -1179608, 0, 0, -1179607, 0, 0, -1114096, 0, 0, -1114071, 0, 0, -1048560, 0, 0, -1048535, 0, 0, -983024, 0, 0, -982999, 0, 0, -917488, 0, 0, -917463, 0, 0, -851952, 0, 0, -851947, 0, 0, -851946, 0, 0, -851945, 0, 0, -851944, 0, 0, -851943, 0, 0, -851942, 0, 0, -851927, 0, 0, -786416, 0, 0, -786391, 0, 0, -720880, 0, 0, -720855, 0, 0, -655344, 0, 0, -655328, 0, 0, -655327, 0, 0, -655326, 0, 0, -655325, 0, 0, -655324, 0, 0, -655323, 0, 0, -655322, 0, 0, -655319, 0, 0, -589808, 0, 0, -589783, 0, 0, -524272, 0, 0, -524247, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458733, 0, 0, -458732, 0, 0, -458731, 0, 0, -458730, 1, 0, -458711, 0, 0, -327691, 0, 0, -393200, 0, 0, -393197, 0, 0, -393196, 0, 0, -393195, 0, 0, -393194, 0, 0, -393193, 1, 0, -393175, 0, 0, -262155, 0, 0, -327664, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 0, 0, -327658, 0, 0, -327657, 0, 0, -327656, 1, 0, -327639, 0, 0, -196619, 0, 0, -262128, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 1, 0, -262103, 0, 0, -131083, 0, 0, -196603, 0, 0, -196592, 0, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 0, 0, -196579, 0, 0, -196578, 0, 0, -196577, 0, 0, -196576, 0, 0, -196575, 0, 0, -196567, 0, 0, -65547, 0, 0, -131067, 0, 0, -131056, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -131031, 0, 0, -11, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65520, 0, 0, -65495, 0, 0, 65525, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 16, 0, 0, 36, 1, 65536, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 131061, 0, 0, 65552, 0, 0, 65571, 1, 65536, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 65575, 0, 0, 65576, 0, 0, 65577, 0, 0, 196597, 0, 0, 131106, 1, 65536, 131107, 0, 0, 131108, 0, 0, 131109, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 131113, 0, 0, 196641, 1, 65536, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 262183, 0, 0, 262184, 0, 0, 262185, 0, 0, 327691, 0, 0, 458741, 1, 65536, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393227, 0, 0, 458755, 0, 0, 458763, 0, 0, 524291, 0, 0, 524299, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 524276, 1, 65536, 589811, 1, 65536, 655346, 1, 65536, 720881, 1, 65536, 786416, 1, 65536, 851951, 1, 65536, 917486, 1, 65536, 983021, 1, 65536, 1048556, 1, 65536, 1114091, 1, 65536, 1179626, 1, 65536, 1245161, 1, 65536, 1310696, 1, 65536, 1376231, 1, 65536, 1441766, 1, 65536, 1507301, 1, 65536, 1572836, 1, 65536, 524277, 0, 0, 589812, 0, 0, 655347, 0, 0, 720882, 0, 0, 786417, 0, 0, 851952, 0, 0, 917487, 0, 0, 983022, 0, 0, 1048557, 0, 0, 1114092, 0, 0, 1179627, 0, 0, 1245162, 0, 0, 1310697, 0, 0, 1376232, 0, 0, 1441767, 0, 0, 1507302, 0, 0, 1572837, 0, 0, 524292, 1, 0, 524298, 1, 65536)

[node name="Player" parent="." node_paths=PackedStringArray("UI") instance=ExtResource("2")]
position = Vector2(88, 308)
UI = NodePath("../CanvasLayer/UI")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugUI" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("player")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_astv3")
player = NodePath("../../Player")

[node name="DebugMargin" type="MarginContainer" parent="CanvasLayer/DebugUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="CanvasLayer/DebugUI/DebugMargin"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugUI/DebugMargin/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SlopeDebug" type="Label" parent="CanvasLayer/DebugUI/DebugMargin/Panel/VBoxContainer"]
layout_mode = 2
text = "Slope: false"

[node name="SteepnessDebug" type="Label" parent="CanvasLayer/DebugUI/DebugMargin/Panel/VBoxContainer"]
layout_mode = 2
text = "Steepness: 0.0"

[node name="VelocityDebug" type="Label" parent="CanvasLayer/DebugUI/DebugMargin/Panel/VBoxContainer"]
layout_mode = 2
text = "Velocity: "

[node name="AmmoDebug" type="Label" parent="CanvasLayer/DebugUI/DebugMargin/Panel/VBoxContainer"]
layout_mode = 2
text = "Slope: false"

[node name="OnFloorDebug" type="Label" parent="CanvasLayer/DebugUI/DebugMargin/Panel/VBoxContainer"]
layout_mode = 2
text = "Slope: false"

[node name="OnWallDebug" type="Label" parent="CanvasLayer/DebugUI/DebugMargin/Panel/VBoxContainer"]
layout_mode = 2
text = "Slope: false"

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ksbcl")

[node name="UIMargin" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ShellContainer" type="HBoxContainer" parent="CanvasLayer/UI/UIMargin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Shell1" type="TextureRect" parent="CanvasLayer/UI/UIMargin/ShellContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_fufxx")

[node name="Shell2" type="TextureRect" parent="CanvasLayer/UI/UIMargin/ShellContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_fufxx")
